# subforge

./: .gitignore  CLAUDE.md  EXTENSION_PLAN.md  LICENSE  README.md  README.zh.md  models.yaml  pyproject.toml
docs/: DEPLOYMENT.md
legacy/: demo.py  make_md.py  run_clean.py  transcribe.py
requirements/: README.md  base.txt  dev.txt  funasr.txt  moss.txt  vllm.txt
scripts/: local_smoke_test.py  moss_infer_smoke.py  verify_phase1.py  verify_phase2.py  verify_phase3.py  verify_phase5.py  verify_phase6.py
subforge/: __init__.py  audio.py  cli.py  config.py  exporters.py  models.py  polish.py  server.py  streaming.py  transcriber.py
subforge/backends/: __init__.py  base.py  funasr_backend.py  moss_backend.py  vllm_backend.py
subforge/web/: index.html
